2003-01-15  Stefan Petersen  <spe@>

	* src/Makefile.am, src/color.c, src/draw.c, src/drill.c,
	  src/gerber.c, src/gerbv.c, src/gerbv_screen.h. Added are
	  src/log.[hc], src/gerb_error.h: Finally have managed to
	  change all error reporting routines so it works with
	  Dinos log system. Now should all errors and warnings pop up
	  in an explicit window so it behaves like a proper 
	  X-application. Thanks to Dino I got this fixed. Maybe
	  all code is not what Dino expected, but anyhow I owe him
	  a great THANKS. Maybe all compilation errors should have
	  "return;" after them?

2003-01-14  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: A fix for the previous fix. The previous fix
	  was not good and had to be redone. now. We check the
	  parsed image before we put it in use so we don't have to
	  save alot of thing to be able to back off if error.

2003-01-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: When gerbv discovered RS274D and terminated
	  it tried to free memory to hadn't been allocated due to 
	  it had discovered error in the gerber file. This caused
	  windows to never close and segfaults when terminating.

2002-12-25  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv_screen.h, src/gerbv.c: Changed how the
	  different windows are stored in the screen struct.
	* src/amacro.h: Forgot to include stdlib.h which was needed
	  to remove warnings regarding free missing.
	* src/gerbv.c: Minor beautification cleanups.

2002-12-11  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Fixed 64-bit compilation warning by casting
	  gpointer to long int. Closes bug #642703.

2002-12-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Fixed some kind of bug causing some filled 
	  polygons not to get displayed. Reported by Chris Ellec. 
	  Closes bug #649663.

2002-12-02  Anders Eriksson  <anders@umunet.org>

	* configure.in, src/amacro.c: Applied patch from 
	  Charles Lepple to fix bug #646268 (building on MacOS X).
